# CourseCompass

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  nodes.cpp  parse.py  test.py
api/: .env.example  api.py  go.mod  go.sum  main.go  test.py
api/models/: nodes.go  users.go
api/prereq/: api.py  clean.py  init.py  main.py  parse.py  postgres.py  test.py  tokenize.py
api/utils/: storage.go
backend/: .env.example  CMakeLists.txt
backend/src/: main.cpp
src/: main.cpp  nodes.cpp
